Fix: language switcher buttons fully visible on mobile

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header {
 @media (max-width: 600px) {
   .logo-img {
     width: 120px;
-    margin-left: 0 !important;
+    margin-left: -10px !important;
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
